--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,14 @@ FROM node:alpine
 
 WORKDIR /app
 
+COPY package*.json ./
+
+RUN npm install
+
 COPY . ./
+
+EXPOSE 3000
+
+RUN npm install -g nodemon
 
 CMD ["nodemon", "-L", "app.js"]
