--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,11 @@ FROM node:alpine
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json ./
 
 RUN npm install --silent
+
+RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
 COPY . ./
 
