--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,16 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "^1.8.1",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "cors": "^2.8.5"
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3"
   }
 }
