Add backend structure

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY package.json ./
 
+ENV PORT 3000
+
 RUN npm install --silent
 
 RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
