--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
