--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^2.0.2",
     "bootstrap": "^5.1.3",
     "react-router-dom": "^6.0.2",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
