--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.0.2",
     "bootstrap": "^5.1.3",
     "react-router-dom": "^6.0.2",
+    "react-icons": "^4.3.1",
     "axios": "^0.24.0"
   },
   "scripts": {
