--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-native": "^0.66.3",
+    "react-native-stars": "^1.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
