--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,4 +26,4 @@ jobs:
     - name: run
       run: npm run build --if-present
     - name: test
-      run: npm run test --if-present --passWithNoTests
+      run: npm run test --if-present
