--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-hooks-use-modal": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-star-rating": "^4.0.5",
     "star-based-rating": "^1.5.7",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
