--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "debug": "~4.3.3",
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.14.1",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
