--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
     "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.16.0",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
     "debug": "~4.3.3",
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
     "firebase": "8.10.0",
+    "firebase-functions": "^3.16.0",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
