--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,6 @@ FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
 FIREBASE_PROJECT_ID=
+
+ALGOLIA_APPLICATION_ID=
+ALGOLIA_API_KEY=
