--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
     "firebase": "8.10.0",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
