--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - '3000:3000'
     volumes:
       - ./frontend:/app
+      - fe_node_modules:/app/node_modules
 
   backend:
     build:
@@ -19,3 +20,9 @@ services:
       - '3001:3000'
     volumes:
       - ./backend:/app
+      - be_node_modules:/app/node_modules
+
+
+volumes:
+  fe_node_modules:
+  be_node_modules:
