--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@progress/kendo-licensing": "^1.2.1",
     "@progress/kendo-react-popup": "^4.13.0",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
@@ -20,8 +19,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
     "react-floating-action-button": "^1.0.5",
+    "react-ga": "^3.3.0",
     "react-hooks-use-modal": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
@@ -58,12 +57,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest-dom": "^4.0.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
