--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
+    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.3",
