Tests for main frontend components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "react-scripts test --passWithNoTests --transformIgnorePatterns 'node_modules/(?!(react-bootstrap)/)'",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
@@ -58,7 +58,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
-    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.3",
