Add all paterns page

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,9 @@ COPY package.json ./
 
 ENV PORT 3000
 
-RUN npm install --silent
+RUN npm config rm proxy
+RUN npm config rm https-proxy
+RUN npm install -d
 
 RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
