--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY package.json ./
 
-RUN npm install --silent
+RUN npm install
 
 RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
