--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,3 +27,5 @@ jobs:
       run: npm run build --if-present
     - name: test
       run: npm run test --if-present
+    - name: ui test
+      run: testcafe firefox test/testcafe.js
