--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "eslint-plugin-testcafe": "^0.2.1",
     "firebase": "^9.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
