Removed Foo component, PaternCard => PatternCard, updated .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,5 +6,9 @@ FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
 FIREBASE_PROJECT_ID=
 
+SENDER_EMAIL=
+SENDER_EMAIL_PASSWORD=
+REVIEWS_DESTINATION_EMAIL=
+
 ALGOLIA_APPLICATION_ID=
 ALGOLIA_API_KEY=
