--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -69,4 +69,4 @@ jobs:
     - name: Wait for frontend to start
       run: sleep 30
     - name: Run test suite
-      run: docker exec ds-meic5_frontend_1 npm run test --if-present
+      run: docker exec ds-test_frontend_1 npm run test --if-present
