--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -68,5 +68,7 @@ jobs:
       run: docker ps -a
     - name: Wait for frontend to start
       run: sleep 30
-    - name: Run test suite
+    - name: Run react test
       run: docker exec ds-test_frontend_1 npm run test --if-present
+    - name: Run ui tests with TestCafe
+      run: npm install -g testcafe && npm run test-ui
