--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false --passWithNoTests --transformIgnorePatterns 'node_modules/(?!(react-bootstrap)/)' && testcafe \"firefox:headless\" test/testcafe.js",
+    "test": "react-scripts test --watchAll=false --passWithNoTests --transformIgnorePatterns 'node_modules/(?!(react-bootstrap)/)'",
+    "test-ui": "testcafe \"firefox:headless\" test/testcafe.js",
     "eject": "react-scripts eject",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
