--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -70,5 +70,7 @@ jobs:
       run: sleep 30
     - name: Run react test
       run: docker exec ds-test_frontend_1 npm run test --if-present
+    - name: Install TestCafe
+      run: npm install -g testcafe
     - name: Run ui tests with TestCafe
-      run: npm install -g testcafe && npm run test-ui
+      run: cd frontend && npm run test-ui
