--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -42,28 +42,26 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1
-      with:
-        envkey_FIREBASE_API_KEY: ${{secrets.FIREBASE_API_KEY}}
-        envkey_FIREBASE_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
-        envkey_FIREBASE_STORAGE_BUCKET: ${{secrets.FIREBASE_STORAGE_BUCKET}}
-        envkey_FIREBASE_MESSAGING_SENDER_ID: ${{secrets.FIREBASE_MESSAGING_SENDER_ID}}
-        envkey_FIREBASE_APP_ID: ${{secrets.FIREBASE_APP_ID}}
-        envkey_FIREBASE_MEASUREMENT_ID: ${{secrets.FIREBASE_MEASUREMENT_ID}}
-        envkey_FIREBASE_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
-        envkey_SENDER_EMAIL: ${{secrets.SENDER_EMAIL}}
-        envkey_SENDER_EMAIL_PASSWORD: ${{secrets.SENDER_EMAIL_PASSWORD}}
-        envkey_REVIEWS_DESTINATION_EMAIL: ${{secrets.REVIEWS_DESTINATION_EMAIL}}
-        envkey_ALGOLIA_APPLICATION_ID: ${{secrets.ALGOLIA_APPLICATION_ID}}
-        envkey_ALGOLIA_API_KEY: ${{secrets.ALGOLIA_API_KEY}}
-        file_name: .env
-    - name: Move .env to backend
-      run: mv .env backend
     - name: Check current directory
       run: pwd & ls -la & ls -la backend
     - name: Build the docker-compose stack
-      run: docker-compose -f docker-compose.yml up -d
+      run: docker-compose up -d
+    - name: Add environment variables with secrets
+      run: |
+        docker exec ds-test_backend_1 export FIREBASE_API_KEY=${{secrets.FIREBASE_API_KEY}}
+        docker exec ds-test_backend_1 export FIREBASE_AUTH_DOMAIN=${{secrets.FIREBASE_AUTH_DOMAIN}}
+        docker exec ds-test_backend_1 export FIREBASE_STORAGE_BUCKET=${{secrets.FIREBASE_STORAGE_BUCKET}}
+        docker exec ds-test_backend_1 export FIREBASE_MESSAGING_SENDER_ID=${{secrets.FIREBASE_MESSAGING_SENDER_ID}}
+        docker exec ds-test_backend_1 export FIREBASE_APP_ID=${{secrets.FIREBASE_APP_ID}}
+        docker exec ds-test_backend_1 export FIREBASE_MEASUREMENT_ID=${{secrets.FIREBASE_MEASUREMENT_ID}}
+        docker exec ds-test_backend_1 export FIREBASE_PROJECT_ID=${{secrets.FIREBASE_PROJECT_ID}}
+        docker exec ds-test_backend_1 export SENDER_EMAIL=${{secrets.SENDER_EMAIL}}
+        docker exec ds-test_backend_1 export SENDER_EMAIL_PASSWORD=${{secrets.SENDER_EMAIL_PASSWORD}}
+        docker exec ds-test_backend_1 export REVIEWS_DESTINATION_EMAIL=${{secrets.REVIEWS_DESTINATION_EMAIL}}
+        docker exec ds-test_backend_1 export ALGOLIA_APPLICATION_ID=${{secrets.ALGOLIA_APPLICATION_ID}}
+        docker exec ds-test_backend_1 export ALGOLIA_API_KEY=${{secrets.ALGOLIA_API_KEY}}
+    - name: Restart docker
+      run: docker-compose stop && docker-compose up -d
     - name: Check running containers
       run: docker ps -a
     - name: Wait for frontend to start
