--- a/docker-compose_workflows.yml
+++ b/docker-compose_workflows.yml
@@ -5,7 +5,7 @@ services:
       context: frontend/
       dockerfile: Dockerfile
     environment:
-      - CHOKIDAR_USEPOLLING: true
+      - CHOKIDAR_USEPOLLING=true
     ports:
       - '3000:3000'
     volumes:
