[workflows] replacing : syntax for = in env

--- a/docker-compose_workflows.yml
+++ b/docker-compose_workflows.yml
@@ -17,18 +17,18 @@ services:
       context: backend/
       dockerfile: Dockerfile
     environment:
-      - FIREBASE_API_KEY: ${FIREBASE_API_KEY}
-      - FIREBASE_AUTH_DOMAIN: ${FIREBASE_AUTH_DOMAIN}
-      - FIREBASE_STORAGE_BUCKET: ${FIREBASE_STORAGE_BUCKET}
-      - FIREBASE_MESSAGING_SENDER_ID: ${FIREBASE_MESSAGING_SENDER_ID}
-      - FIREBASE_APP_ID: ${FIREBASE_APP_ID}
-      - FIREBASE_MEASUREMENT_ID: ${FIREBASE_MEASUREMENT_ID}
-      - FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID}
-      - SENDER_EMAIL: ${SENDER_EMAIL}
-      - SENDER_EMAIL_PASSWORD: ${SENDER_EMAIL_PASSWORD}
-      - REVIEWS_DESTINATION_EMAIL: ${REVIEWS_DESTINATION_EMAIL}
-      - ALGOLIA_APPLICATION_ID: ${ALGOLIA_APPLICATION_ID}
-      - ALGOLIA_API_KEY: ${ALGOLIA_API_KEY}
+      - FIREBASE_API_KEY=${FIREBASE_API_KEY}
+      - FIREBASE_AUTH_DOMAIN=${FIREBASE_AUTH_DOMAIN}
+      - FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
+      - FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
+      - FIREBASE_APP_ID=${FIREBASE_APP_ID}
+      - FIREBASE_MEASUREMENT_ID=${FIREBASE_MEASUREMENT_ID}
+      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+      - SENDER_EMAIL=${SENDER_EMAIL}
+      - SENDER_EMAIL_PASSWORD=${SENDER_EMAIL_PASSWORD}
+      - REVIEWS_DESTINATION_EMAIL=${REVIEWS_DESTINATION_EMAIL}
+      - ALGOLIA_APPLICATION_ID=${ALGOLIA_APPLICATION_ID}
+      - ALGOLIA_API_KEY=${ALGOLIA_API_KEY}
     ports:
       - '3001:3000'
     volumes:
